--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portada1.webp" class="img-fluid rounded-start w100" alt="portada pelicula 1">
+                            <img src="./assets/portada1.webp" class="img-fluid rounded-start w100" alt="portada pelicula Hasta el punto">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -116,13 +116,13 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portada2.webp" class="img-fluid rounded-start w100" alt="portada pelicula 2">
+                            <img src="./assets/portada2.webp" class="img-fluid rounded-start w100" alt="portada pelicula Cruce de datos">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h2 class="card-title">Cruce de datos</h2>
                                 <h3 class="card-subtitle">Estreno</h3>
-                                <p class="card-text">Protagonizada por el reconocido Jerry Peterson. Es una de esas películas que, si te gusta el género, no podés dejar de ver. Ambientada en el sur de Estados Unidos. Dos amigos deciden hacer un hackeo que trae consecuencias mayúsculas inesperadas.</p>
+                                <p class="card-text">Protagonizada por el reconocido Jerry Peterson. Es una de esas películas que, si te gusta el género, no podés dejar de ver. Ambientada en el sur de Estados Unidos. Dos amigos deciden hacer un hackeo que trae consecuencias mayúsculas.</p>
                                 <p class="card-text">+16. Acción. 104min.<br>Director: John Jackson.<br>Origen: USA</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
@@ -134,7 +134,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portada3.webp" class="img-fluid rounded-start w100 imgPortadas" alt="portada pelicula 3">
+                            <img src="./assets/portada3.webp" class="img-fluid rounded-start w100 imgPortadas" alt="portada pelicula El cocodrilo">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -152,7 +152,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portada4.webp" class="img-fluid rounded-start w100" alt="portada pelicula 4">
+                            <img src="./assets/portada4.webp" class="img-fluid rounded-start w100" alt="portada pelicula El orin del Diablo">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -170,7 +170,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portada5.webp" class="img-fluid rounded-start w100" alt="portada pelicula 5">
+                            <img src="./assets/portada5.webp" class="img-fluid rounded-start w100" alt="portada pelicula Cine Club Temporada 71">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -188,7 +188,7 @@
                 <div class="card">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="./assets/portada6.webp" class="img-fluid rounded-start w100" alt="portada pelicula 6">
+                            <img src="./assets/portada6.webp" class="img-fluid rounded-start w100" alt="portada pelicula La muerte del ocelote">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
@@ -255,7 +255,7 @@
         <!-- noticias cine nacional -->
             <figure class="f1">
                 <div class="div-cine-nacional">
-                    <img class="img-noticias-large fluid" src="./assets/darin.webp">
+                    <img class="img-noticias-large fluid" src="./assets/darin.webp" alt="imagen de ricardo darin">
                     <a class="a-cine" href="./pages/404.html"><figcaption class="fig-noticia">Cine Nacional</figcaption></a>
                 </div>
                 <div class="div-p-nacional">
@@ -266,7 +266,7 @@
         <!-- noticias cine internacional -->
             <figure class="f2">
                 <div class="div-cine-nacional">
-                    <img class="img-noticias-large fluid" src="./assets/hermanos.webp">
+                    <img class="img-noticias-large fluid" src="./assets/hermanos.webp" alt="imagen de los hermanos coen">
                     <a class="a-cine" href="./pages/404.html"><figcaption class="fig-noticia">Cine Internacional</figcaption></a>
                 </div>
                 <div class="div-p-internacional">
