--- a/pages/cineclub.html
+++ b/pages/cineclub.html
@@ -61,7 +61,7 @@
                     <p class="p-cont mp">Marco Peruzzi</p>
                     <p class="p-cont sc">Socio Clásico</p>
                 </div>
-                <div class="perf wc">
+                <div class="perf">
                     <p class="perfil-usuario">Socio: 011254</p>
                     <p class="perfil-usuario">Desde: 21/03/19</p>
                     <p class="perfil-usuario">Cantidad de puntos: 420</p>
@@ -89,7 +89,7 @@
             </section>
         </section>
         <section class="publicidades">
-            <h2 class="ciclos-h">Lo que viene</h2>
+            <h2 class="segundos-titulos">Lo que viene</h2>
             <div class="ciclos">
                 <div class="publi1">
                     <img class="publi" src="../assets/publi3.webp">
