--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -132,7 +132,7 @@
             <!-- ends compra de entradas -->
             <!-- start imagen pelicula -->
             <div class="peli-imagen jc" id="peli-img">
-                <img class="portada-compra" src="../assets/portada1.webp">
+                <img class="portada-compra" src="../assets/portada1.webp" alt="portada pelicula seleccionada Hasta el punto">
             </div>
             <!-- ends imagen pelicula -->
             <!-- start descripcion pelicula -->
@@ -156,7 +156,7 @@
             <!-- start trailer youtube -->
             <div class="trailer-div" id="trailer">
                 <div class="trailer1">
-                    <iframe class="vif" width="680" height="360" src="https://www.youtube.com/embed/m6jfZa00vkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <iframe class="vif" width="680" height="360" src="https://www.youtube.com/embed/m6jfZa00vkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen alt="video trailer de la pelicula"></iframe>
                 </div>
             </div>
             <!-- ends trailer youtube-->
