--- a/pages/404.html
+++ b/pages/404.html
@@ -43,7 +43,7 @@
                         </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./perfil.html">Ir a mi perfil</a></li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
                     </ul>
                     </li>
                 </ul>
