--- a/pages/cartelera.html
+++ b/pages/cartelera.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Elegi la pelicula que quieras en Cine America</title>
-    <meta name="description" content="La cartelera disponible para vos, al mejor precio y con peliculas de hoy y de siempre">
-    <meta name="keywords" content="cartelera pelicula entradas estreno ciclo comprar">
+    <title>Elegí la película que quieras en Cine América</title>
+    <meta name="description" content="La cartelera disponible para vos, al mejor precio y con películas de hoy y de siempre">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -45,7 +44,7 @@
                         </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./perfil.html">Ir a mi perfil</a></li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
                     </ul>
                     </li>
                 </ul>
@@ -61,7 +60,7 @@
               <div class="card h-100 colgrid">
                 <a href="../pages/entradas.html">
                   
-                  <img src="../assets/portada1.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula1">
+                  <img src="../assets/portada1.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula Hasta el punto">
                   
                 </a>
                 <div class="card-body">
@@ -79,7 +78,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/portada2.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula2">
+                    <img src="../assets/portada2.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula Cruce de datos">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">Cruce de datos</h2>
@@ -96,7 +95,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/portada3.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula3">
+                    <img src="../assets/portada3.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula El cocodrilo">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">El cocodrilo</h2>
@@ -113,7 +112,7 @@
             <div class="col">
               <div class="card h-100 colgrid">
                 <a href="../pages/entradas.html">
-                  <img src="../assets/portada4.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula4">
+                  <img src="../assets/portada4.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula El orín del diablo">
                 </a>
                 <div class="card-body">
                   <h2 class="card-title">El orín del Diablo (2021)</h2>
@@ -130,7 +129,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/portada5.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula5">
+                    <img src="../assets/portada5.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula El viento trae una cosa">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">El viento trae una cosa (1998)</h2>
@@ -147,7 +146,7 @@
             <div class="col">
                 <div class="card h-100 colgrid">
                   <a href="../pages/entradas.html">
-                    <img src="../assets/portada6.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula6">
+                    <img src="../assets/portada6.webp" class="card-img-top img-cartelera img-fluid rounded-start w100" alt="portada pelicula La muerte del ocelote">
                   </a>
                   <div class="card-body">
                     <h2 class="card-title">La muerte del ocelote (2019)</h2>
