--- a/pages/cineclub.html
+++ b/pages/cineclub.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tu perfil de Cine Club del Cine America</title>
-    <meta name="description" content="Tener cuenta de Cine Club es tu mejor opcion para disfrutar de los beneficios y ciclos exclusivos">
-    <meta name="keywords" content="cine perfil socio puntos ciclos">
+    <title>Tu perfil de Cine Club del Cine América</title>
+    <meta name="description" content="Tener cuenta de Cine Club es tu mejor opción para disfrutar de los beneficios y ciclos exclusivos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -45,7 +44,7 @@
                         </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./perfil.html">Ir a mi perfil</a></li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
                     </ul>
                     </li>
                 </ul>
@@ -65,9 +64,9 @@
                     <p class="perfil-usuario">Socio: 011254</p>
                     <p class="perfil-usuario">Desde: 21/03/19</p>
                     <p class="perfil-usuario">Cantidad de puntos: 420</p>
-                    <p class="perfil-usuario">Cantidad de peliculas vistas: 91</p>
-                    <p class="perfil-usuario">Peliculas valoradas: 32</p>
-                    <p class="perfil-usuario">Peliculas comentadas: 22</p>
+                    <p class="perfil-usuario">Cantidad de películas vistas: 91</p>
+                    <p class="perfil-usuario">Películas valoradas: 32</p>
+                    <p class="perfil-usuario">Películas comentadas: 22</p>
                 </div>
                 <div class="contacto-cc wc">
                     <a class="tdn" href="./404.html">
@@ -92,10 +91,10 @@
             <h2 class="segundos-titulos">Lo que viene</h2>
             <div class="ciclos">
                 <div class="publi1">
-                    <img class="publi" src="../assets/publi3.webp">
+                    <img class="publi" src="../assets/publi3.webp" alt="publicidad cine america ciclos que vienen">
                 </div>
                 <div class="publi1">
-                    <img class="publi" src="../assets/publi4.webp">
+                    <img class="publi" src="../assets/publi4.webp" alt="publicidad cine america proximas promociones">
                 </div>
             </div>
         </section>
