--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Compra tu entrada para tu pelicula favorita en Cine America</title>
-    <meta name="description" content="Compra tu entrada al cine al mejor precio">
-    <meta name="keywords" content="entradas horarios pelicula cine dias trailer">
+    <title>Comprá tu entrada para tu película favorita en Cine América</title>
+    <meta name="description" content="Comprá tu entrada de cine al mejor precio">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -45,7 +44,7 @@
                         </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./perfil.html">Ir a mi perfil</a></li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
                     </ul>
                     </li>
                 </ul>
@@ -54,7 +53,7 @@
     </nav>
     <main class="container-fluid">
         <!-- compra tu entrada -->
-        <h1 class="tit-compra">Compra tu entrada</h1>
+        <h1 class="tit-compra">Comprá tu entrada</h1>
         <!-- grid -->
         <section class="grid-entradas grid-entradas-row-column row-cols-sm-12 section-grid">
             <!-- start nombre pelicula -->
