--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ingresa a tu cuenta del Cine America</title>
+    <title>Ingresa a tu cuenta del Cine América</title>
     <meta name="description" content="Ingresa a tu cuenta del Cine America y disfruta la experiencia completa">
-    <meta name="keywords" content="perfil cuenta ingresar cine">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -45,7 +44,7 @@
                         </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./perfil.html">Ir a mi perfil</a></li>
-                        <li><a class="dropdown-item" href="#">Cerrar sesion</a></li>
+                        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
                     </ul>
                     </li>
                 </ul>
@@ -63,7 +62,7 @@
                         <input class="for1" type="password" placeholder="Contraseña">
                         <button class="for2">Login</button>
                     </form>
-                    <p>¿No tenes cuenta?</p>
+                    <p>¿No tenés cuenta?</p>
                     <a class="a-ingreso" href="./404.html"><p class="a-cuenta">Crear cuenta</p></a>
                 </div>
             </div>
