--- a/index.html
+++ b/index.html
@@ -212,39 +212,48 @@
         <div class="container-pelis" id="proximas-peliculas">
             <figure class="proxima-pelicula1">
                 <img class="portada-peli fluid bbc" src="./assets/proxi1.webp" alt="portada de la pelicula el arbol de la desdicha">
-                <figcaption class="fig-peli">Estrena 22/08/23</figcaption>
+                <figcaption class="fig-peli">El arbol de la desdicha</figcaption>
+                <figcaption class="fig-pelicula">Estrena 22/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
-                <img class="portada-peli fluid"src="./assets/proxi2.webp" alt="portada de la pelicula de chuky">
-                <figcaption class="fig-peli">Estrena 22/08/23</figcaption>
+                <img class="portada-peli fluid"src="./assets/proxi2.webp" alt="portada de la pelicula de chucky">
+                <figcaption class="fig-peli">Chucky</figcaption>
+                <figcaption class="fig-pelicula">Estrena 22/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
                 <img class="portada-peli fluid"src="./assets/proxi3.webp" alt="portada de la pelicula las vueltas">
-                <figcaption class="fig-peli">Estrena 15/08/23</figcaption>
+                <figcaption class="fig-peli">Las vueltas</figcaption>
+                <figcaption class="fig-pelicula">Estrena 15/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
                 <img class="portada-peli fluid"src="./assets/proxi4.webp" alt="portada de la pelicula viaje de retorno">
-                <figcaption class="fig-peli">Estrena 15/08/23</figcaption>
+                <figcaption class="fig-peli">Viaje de retorno</figcaption>
+                <figcaption class="fig-pelicula">Estrena 15/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
                 <img class="portada-peli fluid"src="./assets/proxi5.webp" alt="portada de la pelicula grandes momentos">
-                <figcaption class="fig-peli">Estrena 08/08/23</figcaption>
+                <figcaption class="fig-peli">Grandes momentos</figcaption>
+                <figcaption class="fig-pelicula">Estrena 08/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
                 <img class="portada-peli fluid"src="./assets/proxi6.webp" alt="portada de la pelicula la vida de annie">
-                <figcaption class="fig-peli">Estrena 08/08/23</figcaption>
+                <figcaption class="fig-peli">La vida de Annie</figcaption>
+                <figcaption class="fig-pelicula">Estrena 08/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
                 <img class="portada-peli fluid"src="./assets/proxi7.webp" alt="portada de la pelicula el hombre bicentenario">
-                <figcaption class="fig-peli">Estrena 01/08/23</figcaption>
+                <figcaption class="fig-peli">Hombre Bicentenario</figcaption>
+                <figcaption class="fig-pelicula">Estrena 08/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
                 <img class="portada-peli fluid"src="./assets/proxi8.webp" alt="portada de la pelicula el ciervo">
-                <figcaption class="fig-peli">Estrena 01/08/23</figcaption>
+                <figcaption class="fig-peli">El ciervo</figcaption>
+                <figcaption class="fig-pelicula">Estrena 01/08/23</figcaption>
             </figure>
             <figure class="proxima-pelicula1">
                 <img class="portada-peli fluid"src="./assets/proxi9.webp" alt="portada de la pelicula rayos laser">
-                <figcaption class="fig-peli">Estrena 24/07/23</figcaption>
+                <figcaption class="fig-peli">Rayos laser</figcaption>
+                <figcaption class="fig-pelicula">Estrena 24/07/23</figcaption>
             </figure>
         </div>
         <!-- noticias titulo -->
