--- a/pages/entradas.html
+++ b/pages/entradas.html
@@ -78,7 +78,7 @@
             <!-- ends info pelicula -->
             <!-- start compra de entradas-->
             <div class="compra-entradas" id="compra">
-                <select class="form-select form-select-lg" aria-label=".form-select-sm">
+                <select class="form-select form-select-lg">
                     <option selected>Elegí el día</option>
                     <option value="1">Hoy</option>
                     <option value="2">Mañana</option>
@@ -88,7 +88,7 @@
                     <option value="6">Lunes</option>
                     <option value="6">Martes</option>
                 </select>
-                <select class="form-select form-select-lg" aria-label=".form-select-sm">
+                <select class="form-select form-select-lg">
                     <option selected>Elegí tu película</option>
                     <option value="1">Hasta el punto</option>
                     <option value="2">Cruce de datos</option>
@@ -97,14 +97,14 @@
                     <option value="5">Símbolo de paz</option>
                     <option value="6">La muerte del ocelote</option>
                 </select>
-                <select class="form-select form-select-lg" aria-label=".form-select-sm">
+                <select class="form-select form-select-lg">
                     <option selected>Elegí el horario</option>
                     <option value="1">17:30</option>
                     <option value="2">21:45</option>
                     <option value="3">21:50</option>
                     <option value="4">23:45</option>
                 </select>
-                <select class="form-select form-select-lg" aria-label=".form-select-sm">
+                <select class="form-select form-select-lg">
                     <option selected>Elegí el sector de la sala</option>
                     <option value="1">A</option>
                     <option value="2">B</option>
@@ -112,7 +112,7 @@
                     <option value="4">D</option>
                     <option value="5">F</option>
                 </select>   
-                <select class="form-select form-select-lg" aria-label=".form-select-sm">
+                <select class="form-select form-select-lg">
                     <option selected>Cantidad de entradas</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
