--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <div class="card-body">
                                 <h2 class="card-title">El cocodrilo</h2>
                                 <h3 class="card-subtitle">Estreno</h3>
-                                <p class="card-text">Esta comedia negra nos entrega muchos momentos de risas interminables. El protagonista apuesta todo lo que tardó 40 años en ahorrar, convencido de poder encontrar un cocodrilo en el casi seco Río Reven, en un pequeño pueblo al oeste de Irlanda.</p>
+                                <p class="card-text">Esta comedia negra nos entrega muchos momentos de risas interminables. El protagonista apuesta todo lo que tardó 40 años en ahorrar, convencido de poder encontrar un cocodrilo en el casi seco Río Reven, en un pequeño pueblo de Irlanda.</p>
                                 <p class="card-text">+13. Comedia. 144min.<br>Director: Phillips J. Varen.<br>Origen: Irlanda</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
@@ -158,7 +158,7 @@
                             <div class="card-body">
                                 <h2 class="card-title">El orin del Diablo (2021)</h2>
                                 <h3 class="card-subtitle">Ciclo Terror</h3>
-                                <p class="card-text">Ambientada en fines del siglo XIX, esta película de la reconocida Mia Pavlova y protagonizada por Steven Gerard y Pam Beasly cuenta la historia de la primera aparición de un ente. Con momentos de alta tensión y buenos diálogos y fotografía.</p>
+                                <p class="card-text">Ambientada en fines del siglo XIX, esta película de la reconocida Mia Pavlova y protagonizada por Steven Gerard y Pam Beasly cuenta la historia de la primera aparición de un ente. Con momentos de alta tensión, buenos diálogos y fotografia.</p>
                                 <p class="card-text">+16. Terror. 92min.<br>Director: Mia Pavlova.<br>Origen: Gran Bretaña</p>
                                 <a href="./pages/cartelera.html" class="btn">Ver más</a>                                
                             </div>
